--- a/GTO/src/app/home/home.page.html
+++ b/GTO/src/app/home/home.page.html
@@ -86,36 +86,166 @@
 
       <!-- Tercer libro -->
       <ion-card>
-        <ion-card-header>
-          <ion-item lines="none">
-            <ion-avatar slot="start">
-              <img src="assets/icon/Charles.jpg" alt="Animas">
-            </ion-avatar>
-            <ion-label>
-              <ion-card-title>Animas de día claro</ion-card-title>
-              <ion-card-subtitle>Alejandro Sieveking</ion-card-subtitle>
-            </ion-label>
-          </ion-item>
-        </ion-card-header>
+      <ion-card-header>
+        <ion-item lines="none">
+          <ion-avatar slot="start">
+            <img src="assets/icon/Charles.jpg" alt="Charles Baudelaire">
+          </ion-avatar>
+          <ion-label>
+            <ion-card-title>Las Flores Del Mal</ion-card-title>
+            <ion-card-subtitle>Charles Baudelaire</ion-card-subtitle>
+          </ion-label>
+        </ion-item>
+      </ion-card-header>
 
-        <ion-card-content>
-          <div class="card-content-container">
-            <img src="assets/icon/Charles.jpg" alt="Animas de día claro" class="img">
-            <div class="book-description">
-              En este libro Baudelaire se centra en la descripción del mal, 
-              en la apología de lo satánico y en el tratamiento del hombre 
-              como ser miserable y perverso y poseedor del cuerpo como instrumento para todo tipo de vicios.
-            </div>
-          </div>
-        </ion-card-content>
-
-        <div class="card-footer">
-          <div class="card-footer-buttons">
-            <ion-button fill="clear">Arrendar</ion-button>
-            <ion-button fill="clear">Comprar</ion-button>
+      <ion-card-content>
+        <div class="card-content-container">
+          <img src="assets/icon/Charles.jpg" alt="Charles Baudelaire" class="img">
+          <div class="book-description">
+            En este libro Baudelaire se centra en la descripción del mal, 
+            en la apología de lo satánico y en el tratamiento del hombre 
+            como ser miserable y perverso y poseedor del cuerpo como instrumento para todo tipo de vicios.
           </div>
         </div>
-      </ion-card>
+      </ion-card-content>
+
+      <div class="card-footer">
+        <div class="card-footer-buttons">
+          <ion-button fill="clear">Arrendar</ion-button>
+          <ion-button fill="clear">Comprar</ion-button>
+        </div>
+      </div>
+    </ion-card>
+        <!-- Cuarto Libro -->
+    <ion-card>
+      <ion-card-header>
+        <ion-item lines="none">
+          <ion-avatar slot="start">
+            <img src="assets/icon/RomeoyJulieta.webp" alt="Crimen y Castigo">
+          </ion-avatar>
+          <ion-label>
+            <ion-card-title>Romeo y Julieta</ion-card-title>
+            <ion-card-subtitle>William Schakespeare</ion-card-subtitle>
+          </ion-label>
+        </ion-item>
+      </ion-card-header>
+
+      <ion-card-content>
+        <div class="card-content-container">
+          <img src="assets/icon/RomeoyJulieta.webp" alt="RomeoyJulieta" class="img">
+          <div class="book-description">
+            Una de las historias románticas que más traspaso en el tiempo más 
+            allá de los limites de su época para asentarse en la mente popular de todo el mundo. 
+            Donde dos jóvenes se enamoran en la flor de su edad, ambos los menores de dos familias enemigas,
+            adineradas y con un odio y un rencor que va a hacer su relación imposible, una obra que solo pudo ser pensada por la genialidad de su autor.
+          </div>
+        </div>
+      </ion-card-content>
+
+      <div class="card-footer">
+        <div class="card-footer-buttons">
+          <ion-button fill="clear">Arrendar</ion-button>
+          <ion-button fill="clear">Comprar</ion-button>
+        </div>
+      </div>
+    </ion-card>
+
+    <!-- Quinto libro -->
+
+    <ion-card>
+      <ion-card-header>
+        <ion-item lines="none">
+          <ion-avatar slot="start">
+            <img src="assets/icon/La_Metamorfosis.webp" alt="La Metamorfosis">
+          </ion-avatar>
+          <ion-label>
+            <ion-card-title>La Metamorfosis</ion-card-title>
+            <ion-card-subtitle>Franz Kafka</ion-card-subtitle>
+          </ion-label>
+        </ion-item>
+      </ion-card-header>
+
+      <ion-card-content>
+        <div class="card-content-container">
+          <img src="assets/icon/La_Metamorfosis.webp" alt="La Metamorfosis" class="img">
+          <div class="book-description">
+          La Metamorfosis es una obra escrita por Franz Kafka. En ella el autor retrata la vida del joven Gregorio Samsa, 
+          un modesto comerciante viajero que sin motivo aparente, despertó un día convertido en insecto.
+          </div>
+        </div>
+      </ion-card-content>
+
+      <div class="card-footer">
+        <div class="card-footer-buttons">
+          <ion-button fill="clear">Arrendar</ion-button>
+          <ion-button fill="clear">Comprar</ion-button>
+        </div>
+      </div>
+    <!-- Sexto libro -->
+    </ion-card>
+      <ion-card>
+      <ion-card-header>
+        <ion-item lines="none">
+          <ion-avatar slot="start">
+            <img src="assets/icon/La_Liada.jpg" alt="La Liada">
+          </ion-avatar>
+          <ion-label>
+            <ion-card-title>La Liada</ion-card-title>
+            <ion-card-subtitle>Homero</ion-card-subtitle>
+          </ion-label>
+        </ion-item>
+      </ion-card-header>
+    <!-- Septimo libro -->
+      <ion-card-content>
+        <div class="card-content-container">
+          <img src="assets/icon/La_Liada.jpg" alt="La Liada" class="img">
+          <div class="book-description">
+          En torno a Homero todo es misterioso, para unos personaje tan legendario y mitológico como el mismo Aquiles o cualquiera de sus héroes, 
+          para otros una figura histórica, que vivió alrededor del siglo VIII a.C. en Grecia, 
+          autor de los dos poemas más importantes de la Antigüedad: La Ilíada y La Odisea.
+          </div>
+        </div>
+      </ion-card-content>
+
+      <div class="card-footer">
+        <div class="card-footer-buttons">
+          <ion-button fill="clear">Arrendar</ion-button>
+          <ion-button fill="clear">Comprar</ion-button>
+        </div>
+      </div>
+    </ion-card>
+    <!-- Octavo libro -->
+    <ion-card>
+      <ion-card-header>
+        <ion-item lines="none">
+          <ion-avatar slot="start">
+            <img src="assets/icon/OrgulloyPrejuicio.jpg" alt="Orgullo y Prejuicio">
+          </ion-avatar>
+          <ion-label>
+            <ion-card-title>Orgullo y Prejuicio</ion-card-title>
+            <ion-card-subtitle>Jane Austen</ion-card-subtitle>
+          </ion-label>
+        </ion-item>
+      </ion-card-header>
+
+      <ion-card-content>
+        <div class="card-content-container">
+          <img src="assets/icon/OrgulloyPrejuicio.jpg" alt="Orgullo y Prejuicio" class="img">
+          <div class="book-description">
+          En torno a Homero todo es misterioso, para unos personaje tan legendario y mitológico como el mismo Aquiles o cualquiera de sus héroes, 
+          para otros una figura histórica, que vivió alrededor del siglo VIII a.C. en Grecia, 
+          autor de los dos poemas más importantes de la Antigüedad: La Ilíada y La Odisea.
+          </div>
+        </div>
+      </ion-card-content>
+
+      <div class="card-footer">
+        <div class="card-footer-buttons">
+          <ion-button fill="clear">Arrendar</ion-button>
+          <ion-button fill="clear">Comprar</ion-button>
+        </div>
+      </div>
+    </ion-card>
     </div>
   </div>
 </ion-content>
